First commit - Shikha

--- a/views/layout.html
+++ b/views/layout.html
@@ -9,14 +9,17 @@
 
 <body>
     <header>
-        This is the header.
+        Welcome to our Event Registration Platform
     </header>
     <div>
         {% block body %}
         {% endblock %}
     </div>
     <footer>
-        This is the footer.
+        <br />
+        Hope you found this platform useful! <br />
+        Yours truly, </br />
+        Agile Monkeys
     </footer>
 
     {% block late_loading_js %}
