--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <p>
-    This is the body of the index.
+    This app allows you to create new events, view existing events and register for them. Hope you enjoy your time on this platform :)
 </p>
 <p>
     {{salutation}}
