--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,9 @@
 <p>
     {{salutation}}
 </p>
+<p>
+    <a href="/create.html">Use this link</a> to create a new event, or see below for some cat images!
+</p>
 <div class="cat-holder">
     <input type="button" value="Next cat" id="next-cat">
     <img src="/static/img/cat0.jpg" alt="Cat zero">
