added views and controllers for events page and create page

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     {{salutation}}
 </p>
 <p>
-    <a href="/create.html">Use this link</a> to create a new event, or see below for some cat images!
+    <a href="/create">Use this link</a> to create a new event, <a href="/events">Use this link</a> to view existing events, or see below for some cat images!
 </p>
 <div class="cat-holder">
     <input type="button" value="Next cat" id="next-cat">
