--- a/views/create.html
+++ b/views/create.html
@@ -17,7 +17,7 @@
     <input type="text" name="image"><br>
     Date and time<br>
     <input type="datetime-local" name="datetime"><br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit"
 </form>
 
 {% endblock %}
