Changes to create.html page

--- a/views/create.html
+++ b/views/create.html
@@ -8,7 +8,7 @@
     Use this form to create a new event.
 </p>
 
-<form>
+<form action="/events.html">
     Event name<br>
     <input type="text" name="eventname"><br>
     Location<br>
