--- a/views/create.html
+++ b/views/create.html
@@ -8,7 +8,7 @@
     Use this form to create a new event.
 </p>
 
-<form action="/events.html">
+<form action="/events">
     Event name<br>
     <input type="text" name="eventname"><br>
     Location<br>
@@ -17,7 +17,7 @@
     <input type="text" name="image"><br>
     Date and time<br>
     <input type="datetime-local" name="datetime"><br>
-    <input type="submit" value="Submit"
+    <input type="submit" value="Submit">
 </form>
 
 {% endblock %}
