capture form data

--- a/views/create.html
+++ b/views/create.html
@@ -8,7 +8,7 @@
     Use this form to create a new event.
 </p>
 
-<form action="/events">
+<form action="/createevent" method="post">
     Event name<br>
     <input type="text" name="eventname"><br>
     Location<br>
