--- a/views/layout.html
+++ b/views/layout.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    
+    gtag('config', 'UA-129889665-1');
+    </script>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/css/main.css">
     <title>{{title}}</title>
