Aly's updates to HTML

--- a/views/layout.html
+++ b/views/layout.html
@@ -16,6 +16,9 @@
     <title>{{title}}</title>
 </head>
 
+    <!-- http://getbootstrap.com/docs/4.1/content/typography/ -->
+    <h1 class="mb-3">Welcome to our Event Registration Platform</h1>
+
 <body>
     <header>
         Welcome to our Event Registration Platform
