--- a/views/layout.html
+++ b/views/layout.html
@@ -14,9 +14,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/css/main.css">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css"/>
 </head>
 
-    <!-- http://getbootstrap.com/docs/4.1/content/typography/ -->
     <h1 class="mb-3">Welcome to our Event Registration Platform</h1>
     
 <nav class="navbar navbar-inverse">
