--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,9 @@
     This app allows you to create new events, view existing events and register for them. Hope you enjoy your time on this platform :)
 </p>
 <p>
+    <a href="/about">About us</a>
+</p>
+<p>
     {{salutation}}
 </p>
 <p>
