About page - Shikha

--- a/views/about.html
+++ b/views/about.html
@@ -6,7 +6,7 @@
     {{salutation}}
 </p>
 <p>
-    We are a team of MBA students at Yale SOM graduating in 2019. We came to business school with consulting backgrounds and got bitten by the tech bug during our time at school. This website is our attempt to apply some of the freshly learnt coding knowledge in the CS50 and MGMT656 courses.The website is intended to serve as a platform for users to create and register for events at SoM. We would love to hear your feedback on how you liked or what you found not too good on the website. Please email your comments to shikha.kaushal@yale.edu.   
+    We are a team of MBA students at Yale SOM graduating in 2019. We came to business school with consulting backgrounds and got bitten by the tech bug during our time at school. This website is our attempt to apply some of the freshly learnt coding knowledge in the CS50 and MGMT656 courses.The website is intended to serve as a platform for users to create and register for events at SoM. We would love to hear your feedback on what you liked or what you found not too good on the website. Please email your comments to shikha.kaushal@yale.edu.   
 </p>
 
 {% endblock %}
