--- a/views/index.html
+++ b/views/index.html
@@ -7,56 +7,35 @@
 <p>
     <a href="/create">Use this link</a> to create a new event, <a href="/events">Use this link</a> to view existing events, or see below for some cat images!
 </p>
-
-<!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 4</div>
-    <img src="/static/img/cat0.jpg" alt="Cat zero" style="width:100%">
-    <div class="text">Cat Zero</div>
+<!--
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-20" src="/static/img/cat0.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-20" src="/static/img/cat1.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-20" src="/static/img/cat2.jpg" alt="Third slide">
+    </div>
   </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 4</div>
-    <img src="/static/img/cat1.jpg" alt="Cat one" style="width:100%">
-    <div class="text">Cat One</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 4</div>
-    <img src="/static/img/cat2.jpg" alt="Cat two" style="width:100%">
-    <div class="text">Cat Two</div>
-  </div>
-  
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 4</div>
-    <img src="/static/img/cat3.jpg" alt="Cat three" style="width:100%">
-    <div class="text">Cat Three</div>
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-<br>
+-->
 
-<!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-</div>
-
-
-<div class="cat-holder">
-    <input type="button" value="Next cat" id="next-cat">
-    <img src="/static/img/cat0.jpg" alt="Cat zero">
-    <img src="/static/img/cat1.jpg" alt="Cat one">
-    <img src="/static/img/cat2.jpg" alt="Cat two">
-    <img src="/static/img/cat3.jpg" alt="Cat three">
-</div>
 {% endblock %}
 
 {% block late_loading_js %}
