--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner">
+  <div class="carousel-inner" style=" width:300px; height: 500px>
     <div class="carousel-item active">
       <img class="d-block w-20" src="/static/img/cat0.jpg" alt="First slide">
     </div>
