--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,13 @@
     <a href="/create">Use this link</a> to create a new event, <a href="/events">Use this link</a> to view existing events, or see below for some cat images!
 </p>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style=" width:200px; height: 500px>
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner" style=" width:300px; height: 500px>
+  <div class="carousel-inner" style=" width:200px; height: 500px>
     <div class="carousel-item active">
       <img class="d-block w-20" src="/static/img/cat0.jpg" alt="First slide">
     </div>
