--- a/views/index.html
+++ b/views/index.html
@@ -8,23 +8,29 @@
     <a href="/create">Use this link</a> to create a new event, <a href="/events">Use this link</a> to view existing events, or see below for some cat images!
 </p>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style=" width:200px; height: 500px>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  
+  <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner" style=" width:200px; height: 500px>
+  
+  <!-- The slideshow -->
+  <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-20" src="/static/img/cat0.jpg" alt="First slide">
+      <img class="d-block w-100" src="/static/img/cat0.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-20" src="/static/img/cat1.jpg" alt="Second slide">
+      <img class="d-block w-100" src="/static/img/cat1.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-20" src="/static/img/cat2.jpg" alt="Third slide">
+      <img class="d-block w-100" src="/static/img/cat2.jpg" alt="Third slide">
     </div>
   </div>
+  
+  <!-- Left and right controls -->
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -34,7 +40,6 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
 
 {% endblock %}
 
