--- a/views/layout.html
+++ b/views/layout.html
@@ -17,7 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
+    <!-- Secondary Stylesheet for Additional Cusotmizations -->
+    <link rel="stylesheet" href="static/css/main.css">
     <title>{{title}}</title>
 </head>
 <body>
@@ -30,24 +31,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a href="/homepage" class="btn btn-primary" role="button" aria-pressed="true">Home</a>
+      </li>
+      <li class="nav-item active">
+        <a href="/create" class="btn btn-primary" role="button" aria-pressed="true">Create Event</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+        <a href="/events" class="btn btn-primary" role="button" aria-pressed="true">List of Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a href="/about" class="btn btn-primary" role="button" aria-pressed="true">About Us</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
