Latest bootstrap updates with hero images

--- a/views/layout.html
+++ b/views/layout.html
@@ -31,7 +31,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a href="/homepage" class="btn btn-primary" role="button" aria-pressed="true">Home</a>
+        <a href="/" class="btn btn-primary" role="button" aria-pressed="true">Home</a>
       </li>
       <li class="nav-item active">
         <a href="/create" class="btn btn-primary" role="button" aria-pressed="true">Create Event</a>
