--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     {{salutation}}
 </p>
 <p>
-    <a href="/create">Use this link</a> to create a new event, <a href="/events">Use this link</a> to view existing events, or see below for some cat images!
+  Welcome to our event management platform. Feel free to create an event or browse a list of existing events.
 </p>
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -20,13 +20,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/static/img/cat0.jpg" alt="First slide">
+      <img class="d-block w-60" src="/static/img/Audience_1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/cat1.jpg" alt="Second slide">
+      <img class="d-block w-60" src="/static/img/Audience_2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/cat2.jpg" alt="Third slide">
+      <img class="d-block w-60" src="/static/img/Audience_3.jpg" alt="Third slide">
     </div>
   </div>
   
