--- a/views/create.html
+++ b/views/create.html
@@ -7,7 +7,6 @@
 <p>
     Use this form to create a new event.
 </p>
-
 <form action="/createevent" method="post">
     Event name<br>
     <input type="text" name="eventname"><br>
@@ -19,6 +18,59 @@
     <input type="datetime-local" name="datetime"><br>
     <input type="submit" value="Submit">
 </form>
+
+class="submit action-button"
+
+<!-- MultiStep Form -->
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <form id="msform" action="/createevent" method="post">
+            <!-- progressbar -->
+            <ul id="progressbar">
+                <li class="active">Event Organizer Details</li>
+                <li>Event Details</li>
+                <li>Publish and Share</li>
+            </ul>
+            <!-- fieldsets -->
+            <fieldset>
+                <h2 class="fs-title">Event Organizer Details</h2>
+                <h3 class="fs-subtitle">Tell us something more about you</h3>
+                <input type="text" name="fname" placeholder="First Name"/>
+                <input type="text" name="lname" placeholder="Last Name"/>
+                <input type="text" name="phone" placeholder="E-mail Address"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset>
+            <fieldset>
+                <h2 class="fs-title">Event Details</h2>
+                <h3 class="fs-subtitle">Tell us a bit more about your event</h3>
+                <input type="text" name="eventname" placeholder="Event Title"/>
+                <input type="text" name="location" placeholder="Event Location"/>
+                <input type="text" name="description" placeholder="Event Description"/>
+                <input type="text" name="image" placeholder="Event Image URL" multiple>
+                <input type="datetime-local" name="datetime" placeholder="Start Time"/>
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="button" name="next" class="next action-button" value="Next"/>
+            </fieldset>
+            <fieldset>
+                <h2 class="fs-title">Publish and Share </h2>
+                <h3 class="fs-subtitle">Let your friends know about the event!</h3>
+                <!-- Add font awesome icons -->
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.stubhub.com/uconn-huskies-basketball-tickets-uconn-huskies-basketball-hartford-xl-center-12-2-2018/event/103825785/?sort=price%2Basc" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/home?status=https%3A//www.stubhub.com/uconn-huskies-basketball-tickets-uconn-huskies-basketball-hartford-xl-center-12-2-2018/event/103825785/?sort=price%2Basc" class="fa fa-twitter"></a>   
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-pinterest"></a>
+                <a href="#" class="fa fa-snapchat-ghost"></a>
+                <a href="#" class="fa fa-reddit"></a>
+                <a href="#" class="fa fa-rss"></a><br>
+                <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                <input type="submit" class="submit action-button" value="Submit"/>
+            </fieldset>
+            </form>
+        <!-- link to designify.me code snippets -->
+        <!-- /.link to designify.me code snippets -->
+    </div>
+</div>
 
 {% endblock %}
 
