--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,14 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<p>
-    {{salutation}}
-</p>
-<p>
-  Welcome to our event management platform. Feel free to create an event or browse a list of existing events.
-</p>
+
 <div>
     <div class="carousel">
         <ul class="slides">
             <input type="radio" name="radio-buttons" id="img-1" checked />
             <li class="slide-container">
                 <div class="slide-image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Timisoara_-_Regional_Business_Centre.jpg">
+                    <img src="/static/img/Audience1.jpg">
                 </div>
                 <div class="carousel-controls">
                     <label for="img-3" class="prev-slide">
@@ -27,7 +22,7 @@
             <input type="radio" name="radio-buttons" id="img-2" />
             <li class="slide-container">
                 <div class="slide-image">
-                    <img src="http://www.timisoaranight.gruzphoto.eu/IMG_8554.jpg">
+                    <img src="/static/img/Audience2.jpg">
                 </div>
                 <div class="carousel-controls">
                     <label for="img-1" class="prev-slide">
@@ -41,7 +36,7 @@
             <input type="radio" name="radio-buttons" id="img-3" />
             <li class="slide-container">
                 <div class="slide-image">
-                    <img src="https://speakzeasy.files.wordpress.com/2015/05/twa_blogpic_timisoara-4415.jpg">
+                    <img src="/static/img/Audience3.jpg">
                 </div>
                 <div class="carousel-controls">
                     <label for="img-2" class="prev-slide">
