--- a/views/events.html
+++ b/views/events.html
@@ -8,6 +8,17 @@
     Use this page to browse existing events.
 </p>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
 <style>
 table {
     font-family: arial, sans-serif;
@@ -26,6 +37,13 @@ tr:nth-child(even) {
 }
 </style>
 
+<body>
+
+<div class="container">
+  <h2>List of Events</h2>
+   
+  <table class="table table-striped">
+    <thead>
 <table style="width:100%">
   <tr>
     <th>Event id</th>
@@ -34,6 +52,8 @@ tr:nth-child(even) {
     <th>Image</th>
     <th>Date</th>
   </tr>
+   </thead>
+    <tbody>
 {% for event in eventsListSQL %}
 <tr>
     <td>{{ event.id }}</td>
@@ -43,7 +63,13 @@ tr:nth-child(even) {
     <td>{{ event.date }}</td>
 </tr>
 {% endfor %}
+   </tbody>
 </table>
+</div>
+
+</body>
+</html>
+
 
 {% endblock %}
 
