--- a/views/create.html
+++ b/views/create.html
@@ -7,19 +7,17 @@
 <p>
     Use this form to create a new event.
 </p>
-<form action="/createevent" method="post">
-    Event name<br>
-    <input type="text" name="eventname"><br>
-    Location<br>
-    <input type="text" name="location"><br>
-    Image<br>
-    <input type="text" name="image"><br>
-    Date and time<br>
-    <input type="datetime-local" name="datetime"><br>
-    <input type="submit" value="Submit">
-</form>
-
-class="submit action-button"
+    <form action="/createevent" method="post">
+        Event name<br>
+        <input type="text" name="eventname"><br>
+        Location<br>
+        <input type="text" name="location"><br>
+        Image<br>
+        <input type="text" name="image"><br>
+        Date and time<br>
+        <input type="datetime-local" name="datetime"><br>
+        <input type="submit" value="Submit">
+    </form>
 
 <!-- MultiStep Form -->
 <div class="row">
@@ -64,9 +62,9 @@ class="submit action-button"
                 <a href="#" class="fa fa-reddit"></a>
                 <a href="#" class="fa fa-rss"></a><br>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
-                <input type="submit" class="submit action-button" value="Submit"/>
+                <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
-            </form>
+        </form>
         <!-- link to designify.me code snippets -->
         <!-- /.link to designify.me code snippets -->
     </div>
