--- a/views/events.html
+++ b/views/events.html
@@ -32,9 +32,7 @@ td, th {
     padding: 8px;
 }
 
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
+
 </style>
 
 <body>
@@ -42,9 +40,9 @@ tr:nth-child(even) {
 <div class="container">
   <h2>List of Events</h2>
    
-  <table class="table table-striped">
-    <thead>
-<table style="width:100%">
+  <table class="table table-hover table-bordered">
+    <thead class="thead-light">
+
   <tr>
     <th>Event id</th>
     <th>Event name</th>
