Aly's updates to Create page

--- a/views/create.html
+++ b/views/create.html
@@ -2,23 +2,8 @@
 
 {% block body %}
 <p>
-    {{salutation}}
-</p>
-<p>
     Use this form to create a new event.
 </p>
-    <form action="/createevent" method="post">
-        Event name<br>
-        <input type="text" name="eventname"><br>
-        Location<br>
-        <input type="text" name="location"><br>
-        Image<br>
-        <input type="text" name="image"><br>
-        Date and time<br>
-        <input type="datetime-local" name="datetime"><br>
-        <input type="submit" value="Submit">
-    </form>
-
 <!-- MultiStep Form -->
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -65,7 +50,7 @@
                 <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
         </form>
-        <!-- link to designify.me code snippets -->
+        <!-- link to designifssy.me code snippets -->
         <!-- /.link to designify.me code snippets -->
     </div>
 </div>
