About Us page and other design changes

--- a/views/about.html
+++ b/views/about.html
@@ -2,12 +2,51 @@
 
 {% block body %}
 
+<div class="container">
+  <h2>About Us</h2>
+  
+
 <p>
-    {{salutation}}
+    We are a team of MBA students at Yale SOM graduating in 2019. We came to business school with consulting backgrounds and got bitten by the tech bug during our time at school. This website is our attempt to apply some of the recently learned programming knowledge in the CS50 and MGMT656 courses. The website is intended to serve as a platform for users to create and register for events at Yale. We would love to hear your feedback - what you like or what you belive can be improved. If you would like to reach us, dont hesitate to contact one (or all) of us at our e-mails below.    
 </p>
+<br><br>
 <p>
-    We are a team of MBA students at Yale SOM graduating in 2019. We came to business school with consulting backgrounds and got bitten by the tech bug during our time at school. This website is our attempt to apply some of the freshly learnt coding knowledge in the CS50 and MGMT656 courses.The website is intended to serve as a platform for users to create and register for events at SoM. We would love to hear your feedback on what you liked or what you found not too good on the website. Please email your comments to shikha.kaushal@yale.edu.   
-</p>
+<div class="image-cropper">
+    <img src="static/img/AC_imgnew.png" class="rounded">
+</div>
+<div class="textnexttoimage">
+    <h3>Aly Crowley</h3>
+    <b>Post-grad industry:</b> Tech.<br>
+    <b>Favorite programming language:</b> Python.<br>
+    <b>Fun fact:</b> Can speak 5 languages.<br>
+    <b>E-mail Address: </b>aly.crowley@yale.edu <br>
+</div>
+<br><br>
+
+<div class="image-cropper">
+    <img src="static/img/NM_img.jpeg" class="rounded">
+</div>
+<div class="textnexttoimage">
+    <h3>Nikhil Maddirala</h3> 
+    <b>Post-grad industry:</b> Consulting <br>
+    <b>Favorite programming language:</b> Javascript <br>
+    <b>Fun fact:</b><br>
+    <b>E-mail Address: </b>nikhil.maddirala@yale.edu<br>
+
+</div>
+<br><br>
+
+<div class="image-cropper">
+    <img src="static/img/SK_img.jpeg" class="rounded">
+</div>
+
+<div class="textnexttoimage">
+    <h3>Shikha Kaushal</h3>
+    <b>Post-grad industry:</b> Tech <br>
+    <b>Favorite programming language:</b> HTML <br>
+    <b>Fun fact:</b><br>
+    <b>E-mail Address: </b>shikha.kaushal@yale.edu<br>
+</div>
 
 {% endblock %}
 
