--- a/static/bootstrap-4.1.3-dist/css/bootstrap.css
+++ b/static/bootstrap-4.1.3-dist/css/bootstrap.css
@@ -85,8 +85,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+    margin: 100px 800px 100px 100px;
 }
 
 abbr[title],
