--- a/static/css/main.css
+++ b/static/css/main.css
@@ -275,3 +275,42 @@ input:checked + .slide-container .nav label { display: block; }
     left: 0;
     min-height: 1500px;
 }
+
+.image-cropper {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    float: left;
+}
+
+.textnexttoimage {
+    width: 800px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 0%;
+    float: none;
+    padding-left: 50px;
+    padding-top: 50px;
+  
+}
+img {
+    display: inline-block;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
+
+.special-bold {
+  font-weight: 400;
+}
+
+.special-form {
+    max-width: 800px;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    border-radius: 0%;
+}
