added firstname, lastname, email to SQL

--- a/views/create.html
+++ b/views/create.html
@@ -19,9 +19,9 @@
             <fieldset>
                 <h2 class="fs-title">Event Organizer Details</h2>
                 <h3 class="fs-subtitle">Tell us something more about you</h3>
-                <input type="text" name="fname" placeholder="First Name"/>
-                <input type="text" name="lname" placeholder="Last Name"/>
-                <input type="text" name="phone" placeholder="E-mail Address"/>
+                <input type="text" name="firstname" placeholder="First Name"/>
+                <input type="text" name="lastname" placeholder="Last Name"/>
+                <input type="text" name="emailaddress" placeholder="E-mail Address"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
             </fieldset>
             <fieldset>
