--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,10 @@
             <li class="slide-container">
                 <div class="slide-image">
                     <img src="/static/img/Audience1.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+    <h5></h5>
+    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
+  </div>
                 </div>
                 <div class="carousel-controls">
                     <label for="img-3" class="prev-slide">
@@ -23,6 +27,9 @@
             <li class="slide-container">
                 <div class="slide-image">
                     <img src="/static/img/Audience2.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+    <h6></h6>
+    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
                 </div>
                 <div class="carousel-controls">
                     <label for="img-1" class="prev-slide">
@@ -37,6 +44,9 @@
             <li class="slide-container">
                 <div class="slide-image">
                     <img src="/static/img/Audience3.jpg">
+                    <div class="carousel-caption d-none d-md-block">
+    <h7></h7>
+    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
                 </div>
                 <div class="carousel-controls">
                     <label for="img-2" class="prev-slide">
