Event page design

--- a/views/create.html
+++ b/views/create.html
@@ -39,7 +39,7 @@
                 <h2 class="fs-title">Publish and Share </h2>
                 <h3 class="fs-subtitle">Let your friends know about the event!</h3>
                 <!-- Add font awesome icons -->
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//www.stubhub.com/uconn-huskies-basketball-tickets-uconn-huskies-basketball-hartford-xl-center-12-2-2018/event/103825785/?sort=price%2Basc" class="fa fa-facebook"></a>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A// class="fa fa-facebook"></a>
                 <a href="https://twitter.com/home?status=https%3A//www.stubhub.com/uconn-huskies-basketball-tickets-uconn-huskies-basketball-hartford-xl-center-12-2-2018/event/103825785/?sort=price%2Basc" class="fa fa-twitter"></a>   
                 <a href="#" class="fa fa-linkedin"></a>
                 <a href="#" class="fa fa-instagram"></a>
