--- a/views/events.html
+++ b/views/events.html
@@ -14,7 +14,7 @@
     <th>Event id</th>
     <th>Event name</th>
     <th>Location</th> 
-    <th>Image</th>
+    <th>Created By</th>
     <th>Date</th>
   </tr>
    </thead>
@@ -24,7 +24,7 @@
     <td>{{ event.id }}</td>
     <td> <a href="/events/{{ event.id }}">{{ event.title }}</a> </td>
     <td>{{ event.location }}</td>
-    <td>{{ event.image }}</td>
+    <td>{{ event.firstname }} {{ event.lastname }}</td>
     <td>{{ event.date }}</td>
 </tr>
 {% endfor %}
