--- a/views/create.html
+++ b/views/create.html
@@ -13,7 +13,7 @@
             <ul id="progressbar">
                 <li class="active">Event Organizer Details</li>
                 <li>Event Details</li>
-                <li>Publish and Share</li>
+                <li>Confirm</li>
             </ul>
             <!-- fieldsets -->
             <fieldset>
@@ -36,23 +36,12 @@
                 <input type="button" name="next" class="next action-button" value="Next"/>
             </fieldset>
             <fieldset>
-                <h2 class="fs-title">Publish and Share </h2>
-                <h3 class="fs-subtitle">Let your friends know about the event!</h3>
-                <!-- Add font awesome icons -->
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A// class="fa fa-facebook"></a>
-                <a href="https://twitter.com/home?status=https%3A//www.stubhub.com/uconn-huskies-basketball-tickets-uconn-huskies-basketball-hartford-xl-center-12-2-2018/event/103825785/?sort=price%2Basc" class="fa fa-twitter"></a>   
-                <a href="#" class="fa fa-linkedin"></a>
-                <a href="#" class="fa fa-instagram"></a>
-                <a href="#" class="fa fa-pinterest"></a>
-                <a href="#" class="fa fa-snapchat-ghost"></a>
-                <a href="#" class="fa fa-reddit"></a>
-                <a href="#" class="fa fa-rss"></a><br>
+                <h2 class="fs-title">Confirm Below </h2>
+                <h3 class="fs-subtitle">Confirm your submission by submitting below!</h3>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="submit" class="submit action-button" value="Submit">
             </fieldset>
         </form>
-        <!-- link to designifssy.me code snippets -->
-        <!-- /.link to designify.me code snippets -->
     </div>
 
 {% endblock %}
