--- a/views/index.html
+++ b/views/index.html
@@ -46,7 +46,7 @@
                     <img src="/static/img/Audience3.jpg">
                     <div class="carousel-caption d-none d-md-block">
     <h7></h7>
-    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
+    <p style="font-size:50px;">Be in the know! Don't miss a Yale event again!</p>
                 </div>
                 <div class="carousel-controls">
                     <label for="img-2" class="prev-slide">
