--- a/views/singleEvent.html
+++ b/views/singleEvent.html
@@ -7,17 +7,16 @@
 
 <div class="jumbotron">
     <h2 class="h1-responsive">{{ event.title }}</h2>
-    <p class="lead">Placeholder for Event Description.</p>
+    <p class="lead">Event Description: {{ event.description }}</p>
     <hr class="my-2">
 
 <div class="row">
     <div class="col-md-6">
         <form action="/events/{{ event.id }}/rsvp" method="post">
         Enter your email address to RSVP:<br>
-        </form>
-        <br>
         <input type="text" placeholder="E-mail address" name="email"><br>
         <button class="btn btn-primary btn-lg" type="submit">RSVP</button>
+        </form>
     </div>
     
     <div class="col-md-6">
@@ -66,9 +65,6 @@
 
 </div>
 </div>
-
-
-
 
 {% endblock %}
 
