--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
                     <img src="/static/img/Audience1.jpg">
                     <div class="carousel-caption d-none d-md-block">
     <h5></h5>
-    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
+    <p style="font-size:50px;">Be in the know! Don't miss a Yale event again!</p>
   </div>
                 </div>
                 <div class="carousel-controls">
@@ -29,7 +29,7 @@
                     <img src="/static/img/Audience2.jpg">
                     <div class="carousel-caption d-none d-md-block">
     <h6></h6>
-    <p style="font-size:50px;">Be in the know! Do not miss any event at SoM</p>
+    <p style="font-size:50px;">Be in the know! Don't miss a Yale event again!</p>
                 </div>
                 <div class="carousel-controls">
                     <label for="img-1" class="prev-slide">
