--- a/static/multistepform/form/assets/multistepform/css/style.css
+++ b/static/multistepform/form/assets/multistepform/css/style.css
@@ -1,5 +1,5 @@
 /*custom font*/
-@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 
 /*basic reset*/
 * {
