--- a/views/events/new.html
+++ b/views/events/new.html
@@ -27,9 +27,11 @@
             <fieldset>
                 <h2 class="fs-title">Event Details</h2>
                 <h3 class="fs-subtitle">Tell us a bit more about your event</h3>
-                <input type="text" name="eventname" placeholder="Event Title"/>
+                <label for="title"></label>
+                <input type="text" name="title" placeholder="Event Title"/>
                 <input type="text" name="location" placeholder="Event Location"/>
                 <input type="text" name="description" placeholder="Event Description"/>
+                <label for="image"></label>
                 <input type="text" name="image" placeholder="Event Image URL" multiple>
                 <input type="datetime-local" name="datetime" placeholder="Start Time"/>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
