--- a/views/layout.html
+++ b/views/layout.html
@@ -14,18 +14,16 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="../../favicon.ico">
+        <link rel="icon" href="/../../favicon.ico">
     <title>Bootstrap Multi-Step Signup Form</title>
     <!-- Generic Bootstrap 4 CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Primary Stylesheet for Additional Cusotmizations -->
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <!-- Bootstrap core CSS -->
-    <link href="static/multistepform/form/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="/static/multistepform/form/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles -->
-    <link href="static/multistepform/form/assets/multistepform/css/style.css" rel="stylesheet">
+    <link href="/static/multistepform/form/assets/multistepform/css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -38,7 +36,8 @@
 <body>
   
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Yale Eventbrite</a>
+  <a class="navbar-brand" href="#">
+  <img src="static/img/logo.png" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -48,7 +47,7 @@
         <a class="btn btn-light" href="/" role="button">Home</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-light" href="/create" role="button">Create Event</a>
+        <a class="btn btn-light" href="/events/new" role="button">Create Event</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-light" href="/events" role="button">List of Events</a>
@@ -78,10 +77,8 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="static/multistepform/form/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="static/multistepform/form/assets/multistepform/js/msform.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/static/multistepform/form/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/multistepform/form/assets/multistepform/js/msform.js"></script>
 
 </div>
 
