--- a/views/events/new.html
+++ b/views/events/new.html
@@ -29,14 +29,119 @@
                 <h3 class="fs-subtitle">Tell us a bit more about your event</h3>
                 <label for="title"></label>
                 <input type="text" name="title" placeholder="Event Title"/>
+                <label for="location"></label>
                 <input type="text" name="location" placeholder="Event Location"/>
                 <input type="text" name="description" placeholder="Event Description"/>
                 <label for="image"></label>
                 <input type="text" name="image" placeholder="Event Image URL" multiple>
-                <input type="datetime-local" name="datetime" placeholder="Start Time"/>
+            <div class= "special-new">
+                <label for="year">Year</label>
+                <select name="year">
+                    <option>2017</option>
+                    <option>2018</option>
+                    <option>2019</option>
+                    <option>2020</option>
+                    <option>2021</option>
+                    <option>2022</option>
+                </select>
+            </div>
+                <br><br>
+            <div class= "special-new">
+                <label for="month">Month</label>
+                <select name="month">
+                    <option>January</option>
+                    <option>February</option>
+                    <option>March</option>
+                    <option>April</option>
+                    <option>May</option>
+                    <option>June</option>
+                    <option>July</option>
+                    <option>August</option>
+                    <option>September</option>
+                    <option>October</option>
+                    <option>November</option>
+                    <option>December</option>
+                </select>
+            </div>
+                <br><br>
+            <div class= "special-new">
+                <label for="day">Day</label>
+                <select name="day">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                    <option>13</option>
+                    <option>14</option>
+                    <option>15</option>
+                    <option>16</option>
+                    <option>17</option>
+                    <option>18</option>
+                    <option>19</option>
+                    <option>20</option>
+                    <option>21</option>
+                    <option>22</option>
+                    <option>23</option>
+                    <option>24</option>
+                    <option>25</option>
+                    <option>26</option>
+                    <option>27</option>
+                    <option>28</option>
+                    <option>29</option>
+                    <option>30</option>
+                    <option>31</option>
+                </select>
+            </div>
+                <br><br>
+            <div class= "special-new">
+                <label for="hour">Hour</label>
+                <select name="hour">
+                    <option>0</option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>11</option>
+                    <option>12</option>
+                    <option>13</option>
+                    <option>14</option>
+                    <option>15</option>
+                    <option>16</option>
+                    <option>17</option>
+                    <option>18</option>
+                    <option>19</option>
+                    <option>20</option>
+                    <option>21</option>
+                    <option>22</option>
+                    <option>23</option>
+                </select>
+            </div>
+                <br><br>
+            <div class= "special-new">
+                <label for="minute">Minute</label>
+                <select name="minute">
+                    <option>00</option>
+                    <option>30</option>
+                    </select>
+            </div>
+                <br><br>
                 <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
                 <input type="button" name="next" class="next action-button" value="Next"/>
-            </fieldset>
+            </fieldset> 
             <fieldset>
                 <h2 class="fs-title">Confirm Below </h2>
                 <h3 class="fs-subtitle">Confirm your submission by submitting below!</h3>
@@ -45,7 +150,6 @@
             </fieldset>
         </form>
     </div>
-
 
 <script>
     function validateForm() {
