--- a/views/layout.html
+++ b/views/layout.html
@@ -63,6 +63,10 @@
         {% block body %}
         {% endblock %}
     </div>
+    
+    <footer>
+      
+    </footer>
 
     {% block late_loading_js %}
     {% endblock %}
@@ -83,5 +87,11 @@
 </div>
 
 </body>
+
+<footer>
+    <a href='/about'>About</a>
+    <a href='/'>Home</a>
+    <div class="d-block d-md-none">mobile!</div>
+  </footer>
 
 </html>
