--- a/views/about.html
+++ b/views/about.html
@@ -12,10 +12,12 @@
 <br><br>
 <p>
 <div class="image-cropper">
-    <img src="static/img/AC_imgnew.png" class="rounded">
+    <img id="class-nickname-headshot" src="static/img/AC_imgnew.png" height="120" alt="glorious-pony"/>
+   <!-- <img src="static/img/AC_imgnew.png" class="rounded"> -->
 </div>
 <div class="textnexttoimage">
-    <h3>Aly Crowley</h3>
+   <span id="class-nickname-name">glorious-pony</span>
+    <br/>
     <b>Post-grad industry:</b> Tech.<br>
     <b>Favorite programming language:</b> Python.<br>
     <b>Fun fact:</b> Can speak 5 languages.<br>
@@ -24,10 +26,12 @@
 <br><br>
 
 <div class="image-cropper">
-    <img src="static/img/NM_img.jpeg" class="rounded">
+    <img id="class-nickname-headshot" src="static/img/NM_img.jpeg" height="120" alt="zealous-bison"/>
+   <!-- <img src="static/img/NM_img.jpeg" class="rounded"> -->
 </div>
 <div class="textnexttoimage">
-    <h3>Nikhil Maddirala</h3> 
+    <span id="class-nickname-name">zealous-bison</span>
+       <br/>
     <b>Post-grad industry:</b> Consulting <br>
     <b>Favorite programming language:</b> Javascript <br>
     <b>Fun fact:</b><br>
@@ -37,12 +41,14 @@
 <br><br>
 
 <div class="image-cropper">
-    <img src="static/img/SK_img.jpeg" class="rounded">
+    <img id="class-nickname-headshot" src="static/img/SK_img.jpeg" height="120" alt="curious-ox"/>
+    <!-- <img src="static/img/SK_img.jpeg" class="rounded"> -->
 </div>
 
 <div class="textnexttoimage">
-    <h3>Shikha Kaushal</h3>
-    <b>Post-grad industry:</b> Tech <br>
+    <span id="class-nickname-name">curious-ox</span>
+       <br/>
+       <b>Post-grad industry:</b> Tech <br>
     <b>Favorite programming language:</b> HTML <br>
     <b>Fun fact:</b><br>
     <b>E-mail Address: </b>shikha.kaushal@yale.edu<br>
