--- a/views/about.html
+++ b/views/about.html
@@ -56,11 +56,14 @@
 <br><br>
 
 <div class="image-cropper">
-    <img src="static/img/VK_img.jpeg" class="rounded">
+     <img id="class-nickname-headshot" src="static/img/VK_img.jpeg" height="120" alt="thankful-lion"/>
+    <!-- <img src="static/img/VK_img.jpeg" class="rounded"> -->
 </div>
 
 <div class="textnexttoimage">
-    <h3>Vinay Kanchanapally</h3>
+     <span id="class-nickname-name">thankful-lion</span>
+       <br/>
+    
     <b>Post-grad industry:</b> Consulting <br>
     <b>Favorite programming language:</b> Java <br>
     <b>Fun fact:</b> Ambidextrous in soccer and cricket. <br>
