--- a/views/layout.html
+++ b/views/layout.html
@@ -33,11 +33,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>{{title}}</title>
 </head>
+ <header>
+ </header>
 <body>
   
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-  <img src="static/img/logo.png" alt=""></a>
+  <img src="static/img/logo.png" alt="" id ="logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,7 +49,7 @@
         <a class="btn btn-light" href="/" role="button">Home</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-light" href="/events/new" role="button">Create Event</a>
+        <a class="btn btn-light" href="/events/new" role="button" id="new">Create Event</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-light" href="/events" role="button">List of Events</a>
@@ -87,6 +89,8 @@
 </div>
 
 </body>
+
+
 
 <footer>
     <a href='/about'>About</a>
