--- a/views/layout.html
+++ b/views/layout.html
@@ -31,7 +31,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <h1>
-      <title>{{title}}</title>
+      <title id=title>{{title}}</title>
     </h1>
 </head>
  <header>
